--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
+
+    <link rel="shortcut icon" href="#" />
+
 </head>
 
 <body>
@@ -30,6 +33,16 @@
             </div>
 
             <script src="./script.js"></script>
+
+            <div id="error_screen">
+                <video id="video_error" src="disappointed.mp4"></video>
+                <p style="text-align: center;">Por favor, preencha todos os campos</p>
+                <div style="margin-right: 10px; margin-bottom: 10px;">
+                    <button id="update" class="gerar" onclick="returnHomeScreen()" style="background-color: rgb(239, 239, 239); float: right;
+                    ">Ok</button>
+                </div>
+
+            </div>
 
             <fieldset>
                 <div>
