--- a/index.html
+++ b/index.html
@@ -61,8 +61,11 @@
                         </div>
 
                         <div class="instruções">
-                            <p>Preencha a seguir os horários em que você atua durante a semana. Caso não atue neste dia,
-                                deixe em branco.</p>
+                            <p>Preencha a seguir o número de atendimentos que você tem no dia e os horários em que você
+                                atua durante a semana. Caso não atue neste dia,
+                                deixe em branco. </p>
+                            <p>Por exemplo, se um monitor atende das 8h00 às 10h00, e depois das 14h00 às 15h00, ele
+                                atende 2 vezes nesse dia</p>
                         </div>
 
                         <div class="dias">
@@ -435,6 +438,15 @@
                 <textarea id="text-area"></textarea>
             </div>
         </div>
+
+        <script async
+            src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8378822717288808"
+            crossorigin="anonymous"></script>
+        <ins class="adsbygoogle" style="display:block" data-ad-format="fluid" data-ad-layout-key="-fb+5w+4e-db+86"
+            data-ad-client="ca-pub-8378822717288808" data-ad-slot="7828199809"></ins>
+        <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
     </main>
 </body>
 
